force-app/main/default/objects/Time_Period__c/Time_Period__c.object-meta.xml
<CustomObject>
    <description>Records Specific periods of time relating to Funding Awards e.g. Financial Years.</description>
    <label>Time Period</label>
    <nameField>
        <label>Time Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>