force-app/main/default/objects/Time_Period__c/fields/Funding_Award__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Award</label>
    <referenceTo>FundingAward</referenceTo>
    <relationshipLabel>Time Periods</relationshipLabel>
    <relationshipName>Time_Periods</relationshipName>
    <type>Lookup</type>
</CustomField>