force-app/main/default/objects/Time_Period__c/fields/Parent_Time_Period__c.field-meta.xml
<CustomField>
    <fullName>Parent_Time_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Time Period</label>
    <referenceTo>Time_Period__c</referenceTo>
    <relationshipLabel>Time Periods</relationshipLabel>
    <relationshipName>Time_Periods</relationshipName>
    <type>Lookup</type>
</CustomField>