force-app/main/default/objects/Time_Period__c/fields/Phase_Request_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Phase_Request_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phase Request Submitted</label>
    <type>Checkbox</type>
</CustomField>