force-app/main/default/objects/Time_Period__c/fields/Time_Period_Reference__c.field-meta.xml
<CustomField>
    <fullName>Time_Period_Reference__c</fullName>
    <displayFormat>TIM-{00000}</displayFormat>
    <label>Time Period Reference</label>
    <type>AutoNumber</type>
</CustomField>