force-app/main/default/objects/Time_Period__c/fields/Time_Period_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Time_Period_Sequence_Number__c</fullName>
    <description>Used to build time period name and for ordered operations</description>
    <label>Time Period Sequence Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>