force-app/main/default/objects/Time_Period__c/recordTypes/Award_Duration.recordType-meta.xml
<RecordType>
    <fullName>Award_Duration</fullName>
    <active>true</active>
    <description>Duration of entire award</description>
    <label>Award Duration</label>
</RecordType>