force-app/main/default/objects/Time_Period__c/recordTypes/Financial_Year.recordType-meta.xml
<RecordType>
    <fullName>Financial_Year</fullName>
    <active>true</active>
    <label>Financial Year</label>
</RecordType>