force-app/main/default/objects/Time_Period__c/recordTypes/Phase.recordType-meta.xml
<RecordType>
    <fullName>Phase</fullName>
    <active>true</active>
    <label>Phase</label>
</RecordType>